# ai-call-center

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  README.md  TICKETS.md  conftest.py  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
config/: config.yaml
data/: packaging_methods.json  products.json
data/flair/: __init__.py
data/real_world_data/: voice_messages.txt
docker/application/: Dockerfile
evaluate/: evaluate_order_generation.py  utils.py
solutions/: chatgpt_ner.py  flair_ner.py
tests/: test_client_azure_openai.py  test_entity_grouping.py  test_models.py  test_service_entity_recognition.py  test_service_order_proposal.py  test_service_search.py  test_utils.py
training/: flair_format_order_examples.py  flair_train_model.py  generate_order_examples.py  generate_product_examples.py  inspect_products.ipynb  utils.py
vto_pipeline/: __init__.py  containers.py  exceptions.py  main.py  settings.py
vto_pipeline/clients/: azure_openai.py
vto_pipeline/models/: entity_group.py  models.py
vto_pipeline/services/: entity_recognition.py  order_generation.py  search.py
vto_pipeline/util/: text_utils.py
